--- a/src/assets/icon.css
+++ b/src/assets/icon.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2939972 */
-  src: url('//at.alicdn.com/t/font_2939972_gyp14xc8ofq.woff2?t=1637238933526') format('woff2'),
-       url('//at.alicdn.com/t/font_2939972_gyp14xc8ofq.woff?t=1637238933526') format('woff'),
-       url('//at.alicdn.com/t/font_2939972_gyp14xc8ofq.ttf?t=1637238933526') format('truetype');
+  src: url('//at.alicdn.com/t/font_2939972_unb6omf1nfe.woff2?t=1638774210472') format('woff2'),
+       url('//at.alicdn.com/t/font_2939972_unb6omf1nfe.woff?t=1638774210472') format('woff'),
+       url('//at.alicdn.com/t/font_2939972_unb6omf1nfe.ttf?t=1638774210472') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,18 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-shangyiyehoutuifanhui:before {
+  content: "\e8ef";
+}
+
+.icon-xiayiyeqianjinchakangengduo:before {
+  content: "\e8f1";
+}
+
+.icon-zhuye:before {
+  content: "\e610";
 }
 
 .icon-shezhi:before {
