详情界面未完成

--- a/src/assets/icon.css
+++ b/src/assets/icon.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2939972 */
-  src: url('//at.alicdn.com/t/font_2939972_unb6omf1nfe.woff2?t=1638774210472') format('woff2'),
-       url('//at.alicdn.com/t/font_2939972_unb6omf1nfe.woff?t=1638774210472') format('woff'),
-       url('//at.alicdn.com/t/font_2939972_unb6omf1nfe.ttf?t=1638774210472') format('truetype');
+  src: url('//at.alicdn.com/t/font_2939972_9ae0oc288ua.woff2?t=1639048659246') format('woff2'),
+       url('//at.alicdn.com/t/font_2939972_9ae0oc288ua.woff?t=1639048659246') format('woff'),
+       url('//at.alicdn.com/t/font_2939972_9ae0oc288ua.ttf?t=1639048659246') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-kongxinduigou:before {
+  content: "\ebe5";
 }
 
 .icon-shangyiyehoutuifanhui:before {
