--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 #app {
-  font-family: Avenir, Helvetica, Arial, sans-serif;
+  font-family: simsun;
+  font-weight: bold;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   margin-top: 60px;
