--- a/src/assets/icon.css
+++ b/src/assets/icon.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2939972 */
-  src: url('//at.alicdn.com/t/font_2939972_ky4waf98zbf.woff2?t=1639483145010') format('woff2'),
-       url('//at.alicdn.com/t/font_2939972_ky4waf98zbf.woff?t=1639483145010') format('woff'),
-       url('//at.alicdn.com/t/font_2939972_ky4waf98zbf.ttf?t=1639483145010') format('truetype');
+  src: url('//at.alicdn.com/t/font_2939972_qs0c691lj1.woff2?t=1641381294043') format('woff2'),
+       url('//at.alicdn.com/t/font_2939972_qs0c691lj1.woff?t=1641381294043') format('woff'),
+       url('//at.alicdn.com/t/font_2939972_qs0c691lj1.ttf?t=1641381294043') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,34 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-zuji:before {
+  content: "\e604";
+}
+
+.icon-daishouhuo:before {
+  content: "\e601";
+}
+
+.icon-daifukuan:before {
+  content: "\e602";
+}
+
+.icon-tuikuantuihuo:before {
+  content: "\e603";
+}
+
+.icon-quanbudingdan:before {
+  content: "\e695";
+}
+
+.icon-dingdan:before {
+  content: "\e645";
+}
+
+.icon-daipingjia:before {
+  content: "\e646";
 }
 
 .icon-anonymous:before {
