--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -1,5 +1,9 @@
 body {
   min-width: 1280px;
+  background-repeat: no-repeat;
+  background-position:right top;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 /* body::after {
@@ -30,4 +34,17 @@ img {
 }
 .margin_right_10{
   margin-right:10px;
+}
+body::-webkit-scrollbar {
+  width: 6px;
+}
+body::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+  background: rgba(0, 0, 0, 0.2);
+}
+body::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+  border-radius: 0;
+  background: rgba(0, 0, 0, 0.1);
 }
