--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -1,26 +1,11 @@
 body {
   min-width: 1280px;
   background-repeat: no-repeat;
-  background-position:right top;
+  background-position: right top;
   background-attachment: fixed;
   background-size: cover;
+  background-image: url("bg-4.jpg");
 }
-
-/* body::after {
-  content: "";
-  background: url(./bg-3.jpg/) no-repeat top;
-  background-size: cover;
-  background-attachment: fixed;
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  opacity: 0.6;
-  z-index: -1;
-} */
 
 * {
   padding: 0;
@@ -29,11 +14,11 @@ body {
 img {
   vertical-align: top;
 }
-.margin_left_10{
-  margin-left:10px;
+.margin_left_10 {
+  margin-left: 10px;
 }
-.margin_right_10{
-  margin-right:10px;
+.margin_right_10 {
+  margin-right: 10px;
 }
 body::-webkit-scrollbar {
   width: 6px;
@@ -44,6 +29,26 @@ body::-webkit-scrollbar-thumb {
   background: rgba(0, 0, 0, 0.2);
 }
 body::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+  border-radius: 0;
+  background: rgba(0, 0, 0, 0.1);
+}
+.dialog_wrapper {
+  min-height: 386px;
+  max-height: 600px;
+  font-weight: 600;
+  overflow-y: auto;
+  position: relative;
+}
+.dialog_wrapper::-webkit-scrollbar {
+  width: 4px;
+}
+.dialog_wrapper::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+  background: rgba(0, 0, 0, 0.2);
+}
+.dialog_wrapper::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
   border-radius: 0;
   background: rgba(0, 0, 0, 0.1);
